# Nutricion

./: CMakeLists.txt  addmetricdialog.cpp  addmetricdialog.h  addmetricdialog.ui  databasemanager.cpp  databasemanager.h  healthmetricmanager.cpp  healthmetricmanager.h  healtmetric.cpp  healtmetric.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  patientdetailswindow.cpp  patientdetailswindow.h  patientdetailswindow.ui  resources.qrc  styles.qss  user.cpp  user.h  usermanager.cpp  usermanager.h
